# homework

./: CMakeLists.txt
examples/: example01.txt  example01_1.txt  main.cpp
include/: cell.hpp  group.hpp
sources/: cell.cpp  group.cpp
